<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/moviesMenu"
        android:icon="@drawable/ic_movie"
        android:title="@string/Movies"
        />

    <item
        android:id="@+id/tvShowMenu"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/TvShows"
        />
</menu>